feat(backoffice-pages): add page registry (#22)
